<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.edlogics.elrc</groupId>
	<artifactId>edlogics2-elrc</artifactId>
	<packaging>war</packaging>
	<version>0-SNAPSHOT</version>

	<parent>
		<groupId>com.edlogics</groupId>
		<artifactId>edlogics2-platform</artifactId>
		<version>0-SNAPSHOT</version>
	</parent>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<postgresql.version>9.4-1202-jdbc42</postgresql.version>
		<hibernate-validator.version>5.0.2.Final</hibernate-validator.version>
		<loggly.version>0.1.2</loggly.version>

		<!-- @OVERRIDE this property per each project -->
		<repository.domain>stash.edlogics.com</repository.domain>
		<repository.project>stash-ed</repository.project>
		<repository.port>7999</repository.port>
		<!-- @OVERRIDE this property per each project -->
		<repository.user>git</repository.user>
		<!-- @OVERRIDE this property per each project -->
		<repository.name>elrc</repository.name>
		<flyway.version>3.0</flyway.version>
		<janino.version>2.6.1</janino.version>

		<node.version>v0.12.2</node.version>
		<npm.version>2.12.1</npm.version>
		<frontend-maven-plugin-version>0.0.24</frontend-maven-plugin-version>

		<start-class>com.edlogics.ElrcApplication</start-class>
		<argLine>-Xms512m -Xmn768m -XX:MaxMetaspaceSize=1024m
			-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
			-XX:+UseCMSInitiatingOccupancyOnly
			-XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC
			-XX:+CMSScavengeBeforeRemark</argLine>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.edlogics</groupId>
			<artifactId>edlogics2-core</artifactId>
		</dependency>
		<dependency>
			<artifactId>tomcat-embed-core</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<artifactId>tomcat-embed-jasper</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<artifactId>tomcat-embed-logging-juli</artifactId>
			<groupId>org.apache.tomcat.embed</groupId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>tomcat-embed-core</artifactId>
					<groupId>org.apache.tomcat.embed</groupId>
				</exclusion>
				<exclusion>
					<artifactId>tomcat-embed-logging-juli</artifactId>
					<groupId>org.apache.tomcat.embed</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>tomcat-embed-core</artifactId>
					<groupId>org.apache.tomcat.embed</groupId>
				</exclusion>
				<exclusion>
					<artifactId>tomcat-embed-logging-juli</artifactId>
					<groupId>org.apache.tomcat.embed</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mobile</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<!-- thymeleaf dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.mxab.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-data-attribute</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-conditionalcomments</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.mfrey.thymeleaf.extras.cache</groupId>
			<artifactId>thymeleaf-cache-dialect</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-messaging</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>
		<!-- Joda Support -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
		</dependency>
		<!-- XML Support for RSS feed -->
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
		</dependency>
		<!-- Required when the "stomp-broker-relay" profile is enabled -->
		<dependency>
			<groupId>org.projectreactor</groupId>
			<artifactId>reactor-tcp</artifactId>
			<version>1.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.plugin</groupId>
			<artifactId>spring-plugin-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>springloaded</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils-core</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-envers</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpasyncclient</artifactId>
		</dependency>

		<!-- REST Documentation -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
		</dependency>
		<!-- Testing Stuff Only -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId> <!-- Used for Integration Unit tests to make REST calls -->
			<artifactId>jetty-webapp</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.togglz</groupId>
			<artifactId>togglz-testing</artifactId>
			<version>${togglz.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.togglz</groupId>
			<artifactId>togglz-junit</artifactId>
			<version>${togglz.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- our in-memory database provider for tests -->
		<dependency>
			<groupId>ru.yandex.qatools.embed</groupId>
			<artifactId>postgresql-embedded</artifactId>
			<version>1.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-maven-plugin</artifactId>
			<version>${flyway.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-nop</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>backport-util-concurrent</groupId>
					<artifactId>backport-util-concurrent</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.flywaydb.flyway-test-extensions</groupId>
			<artifactId>flyway-spring-test</artifactId>
			<version>${flyway.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>janino</artifactId>
			<version>${janino.version}</version>
		</dependency>
		<dependency>
			<groupId>org.logback-extensions</groupId>
			<artifactId>logback-ext-loggly</artifactId>
			<version>${loggly.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.18</version>
					</dependency>
				</dependencies>
				<configuration>
					<includes>
						<include>**/ElrcSuiteBuilder.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>1.0-m4.3</version>
				<configuration>
					<!-- See goals wiki page for configuration options: https://bitbucket.org/atlassian/jgit-flow/wiki/goals.wiki -->
					<flowInitContext>
						<masterBranchName>master</masterBranchName>
						<developBranchName>development</developBranchName>
						<featureBranchPrefix>feature-</featureBranchPrefix>
						<releaseBranchPrefix>release-</releaseBranchPrefix>
						<hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
						<versionTagPrefix>${project.artifactId}-</versionTagPrefix>
					</flowInitContext>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>code-coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>default-prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>default-report</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>static/**/*.jar</exclude>
										<exclude>static/**/*.class</exclude>
									</excludes>
								</configuration>
							</execution>
							<execution>
								<id>default-check</id>
								<goals>
									<goal>check</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>static/**/*.jar</exclude>
										<exclude>static/**/*.class</exclude>
									</excludes>
									<rules>
										<rule>
											<element>BUNDLE</element>
											<limits>
												<limit>
													<counter>INSTRUCTION</counter>
													<value>COVEREDRATIO</value>
													<minimum>0.35</minimum>
												</limit>
												<limit>
													<counter>CLASS</counter>
													<value>MISSEDCOUNT</value>
													<maximum>8</maximum>
												</limit>
											</limits>
										</rule>
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>